[package]
name = "mongoc-rs"
version = "0.1.0"
authors = ["jakeroggenbuck <jakeroggenbuck2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

[dependencies.tokio]
version = "0.3"
features = ["full"]

[dependencies.mongodb]
version = "2.0.0-alpha.1"
default-features = false
features = ["async-std-runtime"]
