[package]
name = "mongoc-rs"
version = "0.1.0"
authors = ["jakeroggenbuck <jakeroggenbuck2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
futures = "0.3"
termion = "1.5.5"

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.mongodb]
version = "2.0.0-alpha.1"
default-features = false
features = ["async-std-runtime"]
